force-app/config/objects/Agent_Skill_Assignment__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The agent receiving this skill bundle. Restrict on delete prevents orphan assignments — agent cannot be deleted while assignments exist.</description>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Skill Assignments</relationshipLabel>
    <relationshipName>Skill_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>