force-app/config/objects/Agent_Skill_Assignment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this assignment is excluded from agent skill resolution. Allows admins to temporarily remove a bundle from an agent without deleting the assignment record. Useful during training, transitions, or temporary role changes.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>