force-app/config/objects/Agent_Skill_Assignment__c/fields/Skill_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Skill_Bundle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The skill bundle assigned to this agent. Restrict on delete prevents orphan assignments — bundle cannot be deleted while agents are assigned to it.</description>
    <label>Skill Bundle</label>
    <referenceTo>Skill_Bundle__c</referenceTo>
    <relationshipLabel>Agent Assignments</relationshipLabel>
    <relationshipName>Agent_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>